--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <body>
   <h1> Aaron's Portfolio </h1>
-  <img src="./biophotoIndex.JPG">
+  <img src="./biophotoIndex.jpg">
  </body>
 </html>
 
