--- a/index.html
+++ b/index.html
@@ -1,7 +1,304 @@
-<html>
- <body>
-  <h1> Aaron's Portfolio </h1>
-  <img src="./biophotoIndex.jpg">
- </body>
-</html>
+<!DOCTYPE html>
 
+<html lang="es">
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>CV — Aarón Hernández Cid</title>
+<link href="tooplate-minimal-white-style.css" rel="stylesheet"/>
+<style>
+    /* CV-specific tweaks (keeps template look-and-feel) */
+    .hero .subtitle { letter-spacing: 1.5px; text-transform:none; }
+    .headshot { width: 160px; height:160px; border-radius: 50%; object-fit: cover; border:2px solid #000; }
+    .two-col { display: grid; grid-template-columns: 260px 1fr; gap: 40px; align-items: start; }
+    .chip { display:inline-block; border:1px solid #000; padding:6px 10px; font-size:12px; letter-spacing:1px; margin:6px 6px 0 0; text-transform:uppercase; }
+    .section-title { font-size: 36px; font-weight: 100; letter-spacing:-1px; margin-bottom: 20px; }
+    .cv-entry h4 { font-size:18px; font-weight:500; margin-bottom:4px; }
+    .cv-entry .meta { font-size:13px; letter-spacing:1px; text-transform:uppercase; color:#333; margin-bottom:8px; }
+    .cv-entry p { color:#444; }
+    .pub-list li { margin-bottom:10px; }
+    .download-btn { display:inline-block; padding:10px 18px; border:2px solid #000; text-decoration:none; color:#000; margin-top:12px; }
+    .download-btn:hover { background:#000; color:#fff; }
+  </style>
+<meta content="index,follow" name="robots"/><meta content="Currículum de Aarón Hernández Cid — Químico Analítico (NMR/EPR/IR/Raman), educador, investigador y consultor tecnológico." name="description"/><meta content="CV — Aarón Hernández Cid" property="og:title"/><meta content="Perfil, experiencia, educación, logros y publicaciones." name="og:description"/><meta content="profile" property="og:type"/><meta content="summary_large_image" name="twitter:card"/><link href="https://example.com/cv/aaron-hernandez-cid" rel="canonical"/><script>
+(function(){
+  function text(el, sel){ const n=(sel?el.querySelector(sel):el); return n ? n.textContent.trim() : ""; }
+  function allText(el, sel){ return Array.from(el.querySelectorAll(sel)).map(n=>n.textContent.trim()).filter(Boolean); }
+  function attr(el, sel, a){ const n=el.querySelector(sel); return n ? n.getAttribute(a) : ""; }
+
+  function buildJSONLD(){
+    const ctx = "https://schema.org";
+    const name = text(document, "h1") || "Curriculum Vitae";
+    const image = attr(document, ".headshot", "src");
+    const email = attr(document, 'a[href^="mailto:"]', "href").replace(/^mailto:/,"");
+    const phone = text(document, "#contacto .info-item:nth-of-type(2) p");
+    const sameAs = [];
+    const lk = document.querySelector('a[href*="linkedin.com"]'); if(lk) sameAs.push(lk.href);
+
+    // skills from chips
+    const skills = allText(document, ".chip");
+
+    // experience
+    const exp = Array.from(document.querySelectorAll("#experiencia .cv-entry")).map(function(card){
+      const title = text(card, "h3");
+      const meta  = text(card, ".meta");
+      const desc  = text(card, "p");
+      // naive org extraction: before "—" we keep the org, after the dash the dates
+      let worksFor = "", startDate = "", endDate = "";
+      if(meta){
+        const parts = meta.split("—").map(s=>s.trim());
+        worksFor = parts[0] || "";
+        if(parts[1]){
+          const d = parts[1].split("–").map(s=>s.trim());
+          startDate = d[0] || "";
+          endDate   = (d[1]||"").replace(/Presente/i,"");
+        }
+      }
+      return {
+        "@type":"OrganizationRole",
+        roleName: title,
+        startDate: startDate || undefined,
+        endDate: endDate || undefined,
+        memberOf: worksFor ? {"@type":"Organization","name":worksFor} : undefined,
+        description: desc
+      };
+    });
+
+    // education
+    const edu = Array.from(document.querySelectorAll("#educacion .cv-entry")).map(function(card){
+      const degree = text(card, "h4");
+      const meta   = text(card, ".meta");
+      const desc   = text(card, "p");
+      let org="", dates="";
+      if(meta){
+        const parts = meta.split("—").map(s=>s.trim());
+        org = parts[0] || "";
+        dates = parts[1] || "";
+      }
+      return {
+        "@type":"EducationalOccupationalCredential",
+        credentialCategory: "degree",
+        educationalLevel: degree,
+        recognizedBy: org ? {"@type":"CollegeOrUniversity","name":org} : undefined,
+        description: desc,
+        validFor: dates || undefined
+      };
+    });
+
+    // publications (as CreativeWork list)
+    const pubs = Array.from(document.querySelectorAll("#publicaciones .pub-list li")).map(function(li){
+      return {"@type":"CreativeWork","name": li.textContent.trim()};
+    });
+
+    const person = {
+      "@context": ctx,
+      "@type": "Person",
+      "name": name,
+      "image": image,
+      "email": email || undefined,
+      "telephone": phone || undefined,
+      "sameAs": sameAs,
+      "knowsAbout": skills,
+      "hasOccupation": [{"@type":"Occupation","name":"Chemistry / Spectroscopy"}],
+      "worksFor": exp.filter(e=>e.memberOf).map(e=>e.memberOf),
+      "hasRole": exp,
+      "hasCredential": edu,
+      "publishingPrinciples": pubs.length? pubs : undefined
+    };
+
+    // emit
+    const s = document.createElement("script");
+    s.type = "application/ld+json";
+    s.textContent = JSON.stringify(person, null, 2);
+    document.head.appendChild(s);
+    console.log("[CV Auto-Mode] JSON-LD emitted for Person", person);
+  }
+  if(document.readyState!=="loading") buildJSONLD();
+  else document.addEventListener("DOMContentLoaded", buildJSONLD);
+})();
+</script></head>
+<body>
+<!-- Navigation -->
+<nav id="navbar">
+<div class="nav-container">
+<a class="logo" href="#home">CV</a>
+<div class="menu-toggle" id="menuToggle">
+<span></span><span></span><span></span>
+</div>
+<ul class="nav-links" id="navLinks">
+<li><a class="nav-link" href="#home">Inicio</a></li>
+<li><a class="nav-link" href="#perfil">Perfil</a></li>
+<li><a class="nav-link" href="#experiencia">Experiencia</a></li>
+<li><a class="nav-link" href="#educacion">Educación</a></li>
+<li><a class="nav-link" href="#logros">Logros</a></li>
+<li><a class="nav-link" href="#publicaciones">Publicaciones</a></li>
+<li><a class="nav-link" href="#contacto">Contacto</a></li>
+</ul>
+</div>
+</nav>
+<!-- Hero -->
+<section class="hero sm-Section sm-Home" data-keywords="CV, Química, NMR, EPR, IR, Raman, Educación, Consultoría" id="home">
+<div class="hero-content">
+<img alt="Foto de perfil de Aarón Hernández Cid" class="headshot" src="Foto_Buena.jpg"/>
+<h1 style="margin-top:16px;">Dr. Aarón Hernández Cid</h1>
+<p class="subtitle"> Bio-químico Analítico, Investigador y Consultor Tecnológico</p>
+<a class="cta-button" href="#perfil">Ver perfil</a>
+</div>
+</section>
+<!-- Perfil -->
+<section class="about sm-Section sm-Profile" id="perfil">
+<div class="container">
+<div class="split-layout">
+<div class="split-left">
+<h2>Perfil</h2>
+<div class="accent-box">Academia — Industria — I+D</div>
+</div>
+<div class="split-divider"></div>
+<div class="split-right">
+<p>
+            Doctor en Química por la University of Manchester con experiencia multidisciplinaria en
+            espectroscopía (NMR/EPR/IR/Raman), diseño curricular, transferencia tecnológica y
+            desarrollo de productos sostenibles a partir de macroalgas pardas.
+          </p>
+<div>
+<span class="chip">NMR</span>
+<span class="chip">Quimiometría</span>
+<span class="chip">Metodologías analíticas</span>
+<span class="chip">Vinculación academia‑industria</span>
+<span class="chip">Gestión de proyectos</span>
+</div>
+<a class="download-btn" download="" href="assets/docs/AHCCV19xii2024_EN_TS.docx">Descargar CV (DOCX)</a>
+</div>
+</div>
+</div>
+</section>
+<!-- Experiencia -->
+<section class="services sm-Section sm-Experience" id="experiencia">
+<div class="container">
+<div class="services-header"><h2>Experiencia Profesional</h2></div>
+<div class="asymmetric-grid">
+<div class="service-large cv-entry">
+<h3>Bruker Sales Representative (México)</h3>
+<div class="meta">Diquevi SA de CV — 2024 – Presente</div>
+<p>Representación de tecnologías NMR de vanguardia, asesoría y soluciones para clientes académicos e industriales.</p>
+</div>
+<div class="service-small"><div class="service-number">01</div><h4>Ventas técnicas</h4></div>
+</div>
+<div class="asymmetric-grid reverse">
+<div class="service-small"><div class="service-number">02</div><h4>I+D sostenible</h4></div>
+<div class="service-large cv-entry">
+<h3>Chief Technology Officer</h3>
+<div class="meta">BioPlaster Research Inc. — Mar 2020 – Jul 2024</div>
+<p>Investigación y comercialización de productos sostenibles derivados de macroalgas pardas;
+             desarrollo de espumas biodegradables de alginato (MX/a/2023/005644); evaluaciones de ciclo de vida.</p>
+</div>
+</div>
+<div class="asymmetric-grid">
+<div class="service-large cv-entry">
+<h3>Profesor de Tiempo Completo y Consultor Ed‑Tech</h3>
+<div class="meta">Tec de Monterrey, Campus Toluca — Ene 2019 – Jul 2022</div>
+<p>Diseño curricular y docencia en química orgánica/analítica/fisicoquímica; mentoría a pymes para
+             propuestas de investigación y fondos; aceptado como miembro del Sistema Nacional de Investigadores.</p>
+</div>
+<div class="service-small"><div class="service-number">03</div><h4>Educación</h4></div>
+</div>
+<div class="asymmetric-grid reverse">
+<div class="service-small"><div class="service-number">04</div><h4>Capacitación</h4></div>
+<div class="service-large cv-entry">
+<h3>Desarrollador de Material Educativo</h3>
+<div class="meta">NMR School — 2023 – Presente</div>
+<p>Creación de contenido y materiales de entrenamiento en espectroscopía de RMN.</p>
+</div>
+</div>
+</div>
+</section>
+<!-- Educación -->
+<section class="about sm-Section sm-Education" id="educacion">
+<div class="container">
+<div class="values-section">
+<div class="values-header">
+<div class="black-square"></div>
+<h2>Educación</h2>
+<div class="black-square"></div>
+</div>
+</div>
+<div class="two-col" style="max-width:1000px;margin:0 auto;">
+<div>
+<div class="cv-entry">
+<h4>PhD en Química</h4>
+<div class="meta">The University of Manchester, UK — 2013–2016</div>
+<p>Énfasis en espectroscopía de RMN.</p>
+</div>
+<div class="cv-entry" style="margin-top:20px;">
+<h4>Maestría en Ciencias Bioquímicas</h4>
+<div class="meta">UNAM, CDMX — 2010–2012</div>
+<p>Cristalografía de rayos X y purificación de proteínas por cromatografía líquida.</p>
+</div>
+<div class="cv-entry" style="margin-top:20px;">
+<h4>Licenciatura en Biología</h4>
+<div class="meta">Universidad de las Américas Puebla — 2004–2008</div>
+<p>PCR y purificación de ADN.</p>
+</div>
+</div>
+<div>
+<div class="quote-block">
+<span class="quote-mark">"</span>
+<h3>Perfección es eliminar lo superfluo con método y criterio analítico.</h3>
+<div class="quote-author"><span class="author-line"></span><p>A. Hernández C.</p></div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- Logros -->
+<section class="services sm-Section sm-Achievements" id="logros">
+<div class="container">
+<div class="services-header"><h2>Logros Clave</h2></div>
+<div class="values-grid" style="margin-top:20px;">
+<div class="value-card"><div class="value-icon">★</div><h4>eMerge Americas 2023 (MX Rep.)</h4></div>
+<div class="value-card black"><div class="value-icon">★</div><h4>USD $200K (GridX Ignite 2020)</h4></div>
+<div class="value-card black"><div class="value-icon">★</div><h4>Premios y podios en pitch</h4></div>
+<div class="value-card"><div class="value-icon">★</div><h4>Falling Walls Lab — 2º lugar</h4></div>
+</div>
+</div>
+</section>
+<!-- Publicaciones -->
+<section class="about sm-Section sm-Publications" id="publicaciones">
+<div class="container">
+<h2 class="section-title" style="text-align:center;">Publicaciones Seleccionadas</h2>
+<ul class="pub-list" style="max-width:900px;margin:20px auto 0; line-height:1.7;">
+<li>Hernández‑Cid A., Aguirre‑Sampieri S., Díaz‑Vilchis A., Torres‑Larios A. <em>IUBMB Life</em> 64(6):521–528, 2012.</li>
+<li>Poggetto G.D. <em>RSC Advances</em> 7(1):449–452, 2017.</li>
+<li>Hernandez‑Cid A., Piekarska M., Adams R.W., Nilsson M., Evans R., … <em>RSC Advances</em> 7(18):10757–10762, 2017.</li>
+<li>Hernández‑Cid A., Lozano‑Aponte J., Scior T. <em>Int. J. Mol. Sci.</em> 24(23):16722, 2023.</li>
+</ul>
+</div>
+</section>
+<!-- Contacto -->
+<section class="contact" id="contacto">
+<div class="container">
+<div class="contact-grid">
+<div class="contact-info">
+<h2>Contacto</h2>
+<div class="info-item"><h4>Email</h4><p><a href="mailto:aaron.hernandezcd@gmail.com">aaron.hernandezcd@gmail.com</a></p></div>
+<div class="info-item"><h4>Teléfono</h4><p>+52 221 187 2136</p></div>
+<div class="info-item"><h4>LinkedIn</h4><p><a href="https://linkedin.com/in/aaronhdzid" rel="noopener" target="_blank">linkedin.com/in/aaronhdzid</a></p></div>
+</div>
+<div class="contact-divider"></div>
+<div class="contact-form">
+<form>
+<div class="form-group"><input placeholder=" " required="" type="text"/><label>Nombre</label></div>
+<div class="form-group"><input placeholder=" " required="" type="email"/><label>Email</label></div>
+<div class="form-group"><textarea placeholder=" " required="" rows="4"></textarea><label>Mensaje</label></div>
+<button class="submit-btn" type="submit">Enviar</button>
+</form>
+</div>
+</div>
+</div>
+</section>
+<footer>
+<p>© sandbox — Basado en “Minimal White” de Tooplate</p>
+</footer>
+<script src="tooplate-minimal-script.js"></script>
+</body>
+</html>
